small fix to spacing between footer paragraphs

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -374,6 +374,9 @@ footer {
 }
 #footer-text {
     font-size:.8em;
+    p {
+        margin-bottom:.5em;
+    }
 }
 
 /* @end */
